// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Should match snapshot > Request "/" should match snapshot > /@body 1`] = `
"<!doctype html>
    <html lang="en">
      <head>
        <script id="shim:es-module">
  if (!HTMLScriptElement.supports || !HTMLScriptElement.supports('importmap')) {
    self.importShim = Object.assign(
      function importShimProxy() {
        const esModuleShimUrl =
          'https://ga.jspm.io/npm:es-module-shims@1.7.3/dist/es-module-shims.js';
        const promise = new Promise((resolve, reject) => {
          document.head.appendChild(
            Object.assign(document.createElement('script'), {
              src: esModuleShimUrl,
              crossorigin: 'anonymous',
              async: true,
              onload() {
                if (!importShim.$proxy) {
                  resolve(importShim);
                } else {
                  reject(
                    new Error(
                      'No globalThis.importShim found:' + esModuleShimUrl
                    )
                  );
                }
              },
              onerror(error) {
                reject(error);
              },
            })
          );
        });
        return promise.then((importShim) => importShim(...arguments));
      },
      {
        $proxy: true,
      }
    );
  }
</script> <meta charset="utf-8" /><meta name="viewport" content="width=device-width, initial-scale=1.0" /><title >Home - Web Widget</title><style >web-widget{display:contents}</style><script type="module" src="/entry.client.ts"></script><script id="state:web-router" type="application/json">{"pathname":"/","params":{}}</script>
      </head>
      <body>
        <!--[--><header class="_header_d366fc"><nav><ul><li><a href="/">Home</a></li><li><a href="/about">About</a></li></ul></nav></header><main class="_main_d366fc"><!--[--><h1>Welcome to Web Widget.</h1><p> Try to update this message in the <code>./routes/index@route.vue</code> file. </p><h2>React</h2><web-widget import="/routes/(components)/Counter@widget.tsx" name="ReactCounter" loading="lazy" rendertarget="light" recovering data="{&quot;count&quot;:0}"><div class="_counter_6a98f7"><button>−</button><span class="_count_6a98f7">0</span><button>+</button></div></web-widget><h2>Vue</h2><web-widget import="/routes/(components)/Counter@widget.vue" name="VueCounter" loading="lazy" rendertarget="light" recovering data="{&quot;count&quot;:0}"><div class="counter" data-v-a67ee2b2><button data-v-a67ee2b2>−</button><span class="count" data-v-a67ee2b2>0</span><button data-v-a67ee2b2>+</button></div></web-widget><!--]--></main><footer class="_footer_d366fc"><p>This is a footer</p></footer><!--]-->
      </body>
    </html>"
`;

exports[`Should match snapshot > Request "/" should match snapshot > /@headers 1`] = `
{
  "content-type": "text/html; charset=utf-8",
  "x-powered-by": "@web-widget/web-router",
}
`;

exports[`Should match snapshot > Request "/" should match snapshot > /@status 1`] = `200`;

exports[`Should match snapshot > Request "/" should match snapshot > /@statusText 1`] = `"OK"`;

exports[`Should match snapshot > Request "/about" should match snapshot > /about@body 1`] = `
"<!doctype html>
    <html lang="en">
      <head>
        <script id="shim:es-module">
  if (!HTMLScriptElement.supports || !HTMLScriptElement.supports('importmap')) {
    self.importShim = Object.assign(
      function importShimProxy() {
        const esModuleShimUrl =
          'https://ga.jspm.io/npm:es-module-shims@1.7.3/dist/es-module-shims.js';
        const promise = new Promise((resolve, reject) => {
          document.head.appendChild(
            Object.assign(document.createElement('script'), {
              src: esModuleShimUrl,
              crossorigin: 'anonymous',
              async: true,
              onload() {
                if (!importShim.$proxy) {
                  resolve(importShim);
                } else {
                  reject(
                    new Error(
                      'No globalThis.importShim found:' + esModuleShimUrl
                    )
                  );
                }
              },
              onerror(error) {
                reject(error);
              },
            })
          );
        });
        return promise.then((importShim) => importShim(...arguments));
      },
      {
        $proxy: true,
      }
    );
  }
</script> <meta charset="utf-8" /><meta name="viewport" content="width=device-width, initial-scale=1.0" /><title >About - Web Widget</title><style >web-widget{display:contents}</style><script type="module" src="/entry.client.ts"></script><script id="state:web-router" type="application/json">{"pathname":"/about","params":{}}</script>
      </head>
      <body>
        <!--[--><header class="_header_d366fc"><nav><ul><li><a href="/">Home</a></li><li><a href="/about">About</a></li></ul></nav></header><main class="_main_d366fc"><!--[--><h1>About</h1><p> The page you&#39;re looking at is purely static HTML, with no client-side interactivity needed. Because of that, we don&#39;t need to load any JavaScript. Try viewing the page&#39;s source, or opening the devtools network panel and reloading. </p><!--]--></main><footer class="_footer_d366fc"><p>This is a footer</p></footer><!--]-->
      </body>
    </html>"
`;

exports[`Should match snapshot > Request "/about" should match snapshot > /about@headers 1`] = `
{
  "content-type": "text/html; charset=utf-8",
  "x-powered-by": "@web-widget/web-router",
}
`;

exports[`Should match snapshot > Request "/about" should match snapshot > /about@status 1`] = `200`;

exports[`Should match snapshot > Request "/about" should match snapshot > /about@statusText 1`] = `"OK"`;
